# fenton

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: App.cpp  CMakeLists.txt  CallbackMap.cpp  Clock.cpp  EventRegistry.cpp  InputRegistry.cpp
src/core/include/core/: App.hpp  CallbackMap.hpp  Clock.hpp  EventRegistry.hpp  Input.hpp  InputRegistry.hpp  Map.hpp  utils.hpp
src/graphics/: CMakeLists.txt  Camera.cpp  Renderer.cpp  Shader.cpp  VertexBuffer.cpp
src/graphics/include/graphics/: Camera.hpp  Renderer.hpp  Shader.hpp  VertexBuffer.hpp  constants.hpp  tokens.hpp
src/math/include/math/: Matrix44.hpp  Vector3.hpp
src/tests/: constants.hpp  shaders.hpp  testApp.hpp  testShader.hpp  testVertexBuffer.hpp  vertices.hpp
src/tests/test_shaders/: fragShader.frag  vertexShader_glm_test.vert
